mainfest/securitygroup.tf
resource "aws_security_group" "myinstance" {
  vpc_id      = aws_vpc.main.id
  name        = "myinstance"
  description = "security group for my instance"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    #security_groups = [aws_security_group.elb-securitygroup.id]
    cidr_blocks = ["0.0.0.0/0"]
  }

 ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    #security_groups = [aws_security_group.elb-securitygroup.id]
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "myinstance"
  }
}
################# sg lb
resource "aws_security_group" "elb-securitygroup" {
  vpc_id      = aws_vpc.main.id
  name        = "elb"
  description = "security group for load balancer"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 1337
    to_port     = 1337
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "elb"
  }
}

######################## sg postgress
resource "aws_security_group" "allow-postgres" {
  vpc_id      = aws_vpc.main.id
  name        = "allow-postgres"
  description = "allow-postgres"
 # ingress {
 #   from_port       = 5432
 #   to_port         = 5432
 #   protocol        = "tcp"
 #   security_groups = [ aws_security_group.myinstance-instance.id] # allowing access from our example instance
 # }

  ingress {
    from_port   = 1337
    to_port     = 1337
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.myinstance-securitygroup.id]
    cidr_blocks = ["0.0.0.0/0"]
  }
  
 ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.myinstance-securitygroup.id]
    
  }




  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }
  tags = {
    Name = "allow-mongo"
  }
}
